src/test/ui/generic-associated-types/parse/trait-path-types.stderr
error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:8:37
   |
LL |   fn f<'a>(arg : Box<dyn X< [u8; 1] = u32>>) {}
   |                                   - ^ expected one of `,`, `:`, or `>`
   |                                   |
   |                                   maybe try to close unmatched angle bracket

error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:13:37
   |
LL |   fn f1<'a>(arg : Box<dyn X<(Y<'a>) = &'a ()>>) {}
   |                                   - ^ expected one of `,`, `:`, or `>`
   |                                   |
   |                                   maybe try to close unmatched angle bracket

error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:18:33
   |
LL |   fn f1<'a>(arg : Box<dyn X< 'a = u32 >>) {}
   |                              -- ^ expected one of `,`, `:`, or `>`
   |                              |
   |                              maybe try to close unmatched angle bracket

error: aborting due to 3 previous errors

